---------------------------------------------------------------------------------------------------
Version: 1.2.10
Date: 13.01.2024
  Features:
    - Added Janky Quality integration
---------------------------------------------------------------------------------------------------
Version: 1.2.9
Date: 14.11.2023
  Bugfixes:
    - Fixed changelog parsing error
---------------------------------------------------------------------------------------------------
Version: 1.2.8
Date: 14.11.2023
  Bugfixes:
    - Fixed "Ramp Up" startup option not working correctly with some mods
    - Fixed Bob compatibility issue with "FTL D" technology
---------------------------------------------------------------------------------------------------
Version: 1.2.7
Date: 11.11.2023
  Bugfixes:
    - Fixed IR3 compatibility with spaceship fuel not showing up in logistics.
    - Fixed IR3 compatibility paired with Extended Descriptions to show correct info.
---------------------------------------------------------------------------------------------------
Version: 1.2.6
Date: 28.10.2023
  Changes:
    - Changed FTL research to gradually ramp up the required science packs and not all at once (can be changed via startup settings)
---------------------------------------------------------------------------------------------------
Version: 1.2.5
Date: 03.10.2023
  Bugfixes:
    - Fixed GUI popups after completing SpaceX for the first time.
    - Minor spelling fixes
---------------------------------------------------------------------------------------------------
Version: 1.2.4
Date: 09.09.2023
  Bugfixes:
    - Fixed Bobs compatibility: Removed obsolete recipe and technology changes which did not apply to recent bob versions anymore.
    - Fixed Bobs compatibility: Fixed many technology dependencies.
    - Fixed Bobs + Angels compatibility: Fixed low density technology dependency.
    - Fixed Krastorio2 compatibility: Added many missing technology dependencies.