@@ -10,6 +10,6 @@
     "? Krastorio2",
     "? IndustrialRevolution", "? IndustrialRevolution3",
     "? pyalienlife", "? pyalternativeenergy", "? pycoalprocessing", "? pyfusionenergy", "? pyhightech", "? pyindustry", "? pypetroleumhandling", "? pyrawores", "? pypostprocessing",
-    "? janky-quality",
+    "? janky-quality", "?better-victory-screen >= 0.2.3",
     "! SpaceMod", "! space-exploration"]
 }
