@@ -3,6 +3,7 @@ Version: 1.2.10
 Date: 13.01.2024
   Features:
     - Added Janky Quality integration
+    - Added Better Victory Screen integration
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.9
 Date: 14.11.2023
